# rag-document-qa

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  EVALUATION_REQUIREMENTS.md  GITHUB_SETUP.md  INTERVIEWER_GUIDE.md  Procfile  README.md  app.py  full guide .docx  main.py  railway.json  render.yaml  requirements.txt  setup.py  start_local.sh  test_setup.py  vercel.json
api/: main.py
backend/: .env.example  analytics_service.py  build.sh  collaboration_service.py  database.py  document_processor.py  main.py  main_advanced.py  main_enhanced.py  main_final.py  main_minimal.py  main_simple.py  main_working.py  models.py  performance_service.py  pyproject.toml  rag_service.py  requirements.txt  requirements_simple.txt  security_monitor.py  setup.py  setup_env.sh  start.sh  test_chat_history.py  test_progress.py  test_rag.py  ultra_simple.py
frontend/: .eslintrc.json  vercel.json
frontend/app/: globals.css  page.tsx
rag-document-qa/: .gitignore  ARCHITECTURE.md
rag-document-qa/backend/: database.py  document_processor.py  main.py  main_advanced.py  main_minimal.py  models.py  performance_service.py  rag_service.py  requirements.txt  test.txt
rag-document-qa/frontend/app/: globals.css
tests/: requirements-test.txt  test_integration.py  test_qa_integration.py
